# render_tallermk

./: README.md  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
appweb/: admin.py  forms.py  models.py  requirements.txt  urls.py  views.py
appweb/migrations/: 0001_initial.py  0002_mecanico_foto.py  0003_rename_fecha_mecanico_fecha_nacimiento_mecanico_edad_and_more.py  0004_mecanico_descripcion.py  0005_contacto.py  0006_imagen_trabajo_and_more.py  0007_administrador_motivo_rechazo_trabajo_autorizado.py  0008_remove_trabajo_imagenes_trabajo_imagenes.py  0009_alter_trabajo_imagenes.py  0012_trabajo_usuario.py  0013_remove_administrador_trabajos_autorizados_and_more.py  0014_curriculum.py  0015_remove_curriculum_telefono.py  0016_alter_curriculum_experiencia.py  0017_curriculum_especialidad.py  0018_remove_mecanico_cargo.py  0019_remove_administrador_cargo_delete_usuario.py  0020_curriculum_fecha_nacimiento.py  0021_curriculum_numero_telefono.py  0022_alter_curriculum_experiencia.py  0023_curriculum_rut.py  0024_alter_curriculum_experiencia.py
appweb/static/: loginstyles.css  style.css  styleDetalleCV.css
appweb/templates/: TrabajaConNosotros.html  base.html  contacto.html  galeriaMecanicos.html  home.html
appweb/templates/Mantenedor/Curriculum/: listarCurriculum.html
appweb/templates/Mantenedor/Trabajo/: agregarTrabajo.html  modificarTrabajo.html
appweb/templates/Mantenedor/mecanico/: agregar.html  listar.html  modificar.html
appweb/templates/registration/: login.html  registro.html
tallermk/: settings.py  urls.py  wsgi.py
