[tool.poetry]
name = "tallermk"
version = "0.1.0"
description = "Taller mecánico diseñado en DUOC"
authors = ["Williams Diaz Santander"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.1"
pillow = "*"
django-crispy-forms = "*"
crispy-bootstrap5 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
