[tool.poetry]
name = "tallermk"
version = "0.1.0"
description = "Taller mecánico diseñado en DUOC"
authors = ["Williams Diaz Santander"]
readme = "README.md"

[tool.poetry.dependencies]
poetry = "^1.1.0"
python = "^3.8"
django = "^4.2.1"
pillow = "*"
django-crispy-forms = "*"
crispy-bootstrap5 = "*"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
dj-database-url = "^0.5.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
